# legal-document-intelligence

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
examples/: sample_draft_snippet.txt  submission_trace.sample.json
scripts/: create_sample_pdf.py  demo.py  evaluate.py  ingest.py  smoke_api.sh
src/: __init__.py  config.py  logging_setup.py
src/api/: main.py
src/feedback/: __init__.py  learn.py  repository.py
src/generation/: __init__.py  citations.py  drafter.py  ollama_client.py  prompts.py
src/ingestion/: __init__.py  chunking.py  extract.py  formats.py  models.py  pipeline.py  structure.py  text_clean.py
src/retrieval/: __init__.py  embedder.py  store.py
static/: index.html
tests/: conftest.py  test_api.py  test_api_draft_e2e.py  test_chunking.py  test_chunking_edges.py  test_citations.py  test_config.py  test_drafter.py  test_feedback.py  test_formats.py  test_integration_e2e.py  test_learner_ranking.py  test_ollama_client.py  test_pipeline.py  test_pipeline_edge_cases.py  test_prompts.py  test_repository.py  test_retrieval_store.py  test_static_ui.py  test_structure.py  test_structure_edges.py  test_text_clean.py
